force-app/main/default/objects/PreVenta__c/PreVenta__c.object-meta.xml
<CustomObject>
    <description>Objeto personalizado para prospectos o candidatos.</description>
    <label>PreVenta</label>
    <nameField>
        <label>Nombre de PreVenta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PreVentas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>