force-app/main/default/objects/PreVenta__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Dirección</label>
    <type>TextArea</type>
</CustomField>