force-app/main/default/objects/PreVenta__c/fields/Agencia_Refiere__c.field-meta.xml
<CustomField>
    <fullName>Agencia_Refiere__c</fullName>
    <label>Agencia Refiere</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>117000000000</fullName>
                <label>AGENCIA MALL LAS AMERICAS</label>
            </value>
            <value>
                <fullName>125400000000</fullName>
                <label>AGENCIA PLAZA 105</label>
            </value>
            <value>
                <fullName>125200000000</fullName>
                <label>AGN. PASEO JUAN PABLO</label>
            </value>
            <value>
                <fullName>126000000000</fullName>
                <label>AGN ALTARA SPS</label>
            </value>
            <value>
                <fullName>110700000000</fullName>
                <label>AGN-ATB JUAN PABLO II TGU</label>
            </value>
            <value>
                <fullName>114000000000</fullName>
                <label>AGN-ATB LOS ALAMOS SPS</label>
            </value>
            <value>
                <fullName>112600000000</fullName>
                <label>AGN-ATB SALIDA CORTES SPS</label>
            </value>
            <value>
                <fullName>114800000000</fullName>
                <label>AGN-ATB SATELITE SPS</label>
            </value>
            <value>
                <fullName>110300000000</fullName>
                <label>AGN AUTOBANCO BLVD MORAZAN</label>
            </value>
            <value>
                <fullName>133100000000</fullName>
                <label>AGN AVENIDA LA PAZ TGU</label>
            </value>
            <value>
                <fullName>122100000000</fullName>
                <label>AGN CENTRAL METROPOLITANA SPS</label>
            </value>
            <value>
                <fullName>113400000000</fullName>
                <label>AGN CHOLOMA CHM</label>
            </value>
            <value>
                <fullName>116600000000</fullName>
                <label>AGN CHOLUTECA CENTRO CHT</label>
            </value>
            <value>
                <fullName>131400000000</fullName>
                <label>AGN CIRCUNVALACION SPS</label>
            </value>
            <value>
                <fullName>120300000000</fullName>
                <label>AGN CITY MALL SPS</label>
            </value>
            <value>
                <fullName>122800000000</fullName>
                <label>AGN CITY MALL TGU</label>
            </value>
            <value>
                <fullName>111500000000</fullName>
                <label>AGN COMAYAGUA COM</label>
            </value>
            <value>
                <fullName>116400000000</fullName>
                <label>AGN COMAYAGUA MALL PREMIER COM</label>
            </value>
            <value>
                <fullName>130200000000</fullName>
                <label>AGN CT CITY MALL SPS</label>
            </value>
            <value>
                <fullName>130800000000</fullName>
                <label>AGN CT MULTIPLAZA TGU</label>
            </value>
            <value>
                <fullName>131000000000</fullName>
                <label>AGN CT PLAZA HONDUREÑA</label>
            </value>
            <value>
                <fullName>131200000000</fullName>
                <label>AGN CT SANTA MONICA SPS</label>
            </value>
            <value>
                <fullName>133500000000</fullName>
                <label>AGN DANLI CENTRO DNL</label>
            </value>
            <value>
                <fullName>135900000000</fullName>
                <label>AGN DIUNSA PEDREGAL SPS</label>
            </value>
            <value>
                <fullName>136100000000</fullName>
                <label>AGN DIUNSA PROCERES TGU</label>
            </value>
            <value>
                <fullName>112000000000</fullName>
                <label>AGN DIUNSA SPS</label>
            </value>
            <value>
                <fullName>112300000000</fullName>
                <label>AGN EL CENTRO SPS</label>
            </value>
            <value>
                <fullName>110200000000</fullName>
                <label>AGN EL CENTRO TGU</label>
            </value>
            <value>
                <fullName>112500000000</fullName>
                <label>AGN EL PROGRESO PRG</label>
            </value>
            <value>
                <fullName>119200000000</fullName>
                <label>AGN GALERIAS DEL VALLE SPS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>