force-app/main/default/objects/PreVenta__c/fields/Antiguedad__c.field-meta.xml
<CustomField>
    <fullName>Antiguedad__c</fullName>
    <label>Antigüedad</label>
    <length>20</length>
    <type>Text</type>
</CustomField>