force-app/main/default/objects/PreVenta__c/fields/asesor__c.field-meta.xml
<CustomField>
    <fullName>asesor__c</fullName>
    <label>asesor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>