force-app/main/default/objects/PreVenta__c/fields/Calle_Residencia__c.field-meta.xml
<CustomField>
    <fullName>Calle_Residencia__c</fullName>
    <label>Calle/Avenida Residencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>