force-app/main/default/objects/PreVenta__c/fields/Calle_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Calle_Trabajo__c</fullName>
    <label>Calle/Avenida Trabajo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>