force-app/main/default/objects/PreVenta__c/fields/Cargo_Actual__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Actual__c</fullName>
    <label>Cargo Actual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>