force-app/main/default/objects/PreVenta__c/fields/Ciudad_Residencia__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Residencia__c</fullName>
    <label>Ciudad Residencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>