force-app/main/default/objects/PreVenta__c/fields/Ciudad_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Trabajo__c</fullName>
    <label>Ciudad Trabajo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>