force-app/main/default/objects/PreVenta__c/fields/Cliente_Unico_Banco__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Unico_Banco__c</fullName>
    <label>Cliente Unico Banco</label>
    <length>18</length>
    <type>Text</type>
</CustomField>