force-app/main/default/objects/PreVenta__c/fields/Colonia_Residencia__c.field-meta.xml
<CustomField>
    <fullName>Colonia_Residencia__c</fullName>
    <label>Colonia/Barrio Residencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>