force-app/main/default/objects/PreVenta__c/fields/Convertir__c.field-meta.xml
<CustomField>
    <fullName>Convertir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convertir</label>
    <type>Checkbox</type>
</CustomField>