force-app/main/default/objects/PreVenta__c/fields/Convertir_Comentario__c.field-meta.xml
<CustomField>
    <fullName>Convertir_Comentario__c</fullName>
    <label>Comentario</label>
    <type>TextArea</type>
</CustomField>