force-app/main/default/objects/PreVenta__c/fields/Convertir_Enviar_Correo_Electronico__c.field-meta.xml
<CustomField>
    <fullName>Convertir_Enviar_Correo_Electronico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar Correo Electrónico</label>
    <type>Checkbox</type>
</CustomField>