force-app/main/default/objects/PreVenta__c/fields/Convertir_Fecha_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Convertir_Fecha_Vencimiento__c</fullName>
    <label>Fecha Vencimiento</label>
    <type>Date</type>
</CustomField>