force-app/main/default/objects/PreVenta__c/fields/Convertir_No_crear_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Convertir_No_crear_Oportunidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No crear Oportunidad</label>
    <type>Checkbox</type>
</CustomField>