force-app/main/default/objects/PreVenta__c/fields/Convertir_Tarea__c.field-meta.xml
<CustomField>
    <fullName>Convertir_Tarea__c</fullName>
    <label>Convertir Tarea</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Llamada</fullName>
            </value>
            <value>
                <fullName>Enviar Correo</fullName>
            </value>
            <value>
                <fullName>Visita</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Histórico</fullName>
            </value>
            <value>
                <fullName>Correo - Gestión de planilla</fullName>
            </value>
            <value>
                <fullName>Correo - Solicitud de charlas</fullName>
            </value>
            <value>
                <fullName>Correo - Gestiones Varias</fullName>
            </value>
            <value>
                <fullName>Correo - Gestión de Nuevos Ingresos y Bajas</fullName>
            </value>
            <value>
                <fullName>Correo - Reporte de Devolución de Aportes Patronales</fullName>
            </value>
            <value>
                <fullName>Correo - Actualizaciones de Ley</fullName>
            </value>
            <value>
                <fullName>Correo - Solicitud de Cita</fullName>
            </value>
            <value>
                <fullName>Correo - Envío de Propuesta</fullName>
            </value>
            <value>
                <fullName>Correo - Seguimiento de Propuesta</fullName>
            </value>
            <value>
                <fullName>Correo - Acuerdo o Contrato de Administración</fullName>
            </value>
            <value>
                <fullName>Llamada - Solicitud de Charla</fullName>
            </value>
            <value>
                <fullName>Llamada - Gestiones Varias</fullName>
            </value>
            <value>
                <fullName>Llamada - Seguimiento a Propuesta</fullName>
            </value>
            <value>
                <fullName>Llamada - Solicitud de Cita</fullName>
            </value>
            <value>
                <fullName>Visita - Entrega de Documentación Empresarial</fullName>
            </value>
            <value>
                <fullName>Visita - Entrega de Carnéts</fullName>
            </value>
            <value>
                <fullName>Visita - Entrega de Estados de Cuenta</fullName>
            </value>
            <value>
                <fullName>Visita - Capacitación para pago de Planilla</fullName>
            </value>
            <value>
                <fullName>Visita - Nuevos Ingresos</fullName>
            </value>
            <value>
                <fullName>Visita - Presentación de Propuesta</fullName>
            </value>
            <value>
                <fullName>Visita - Recolección de Contratos</fullName>
            </value>
            <value>
                <fullName>Visita - Charlas</fullName>
            </value>
            <value>
                <fullName>Visita - Mantenimiento</fullName>
            </value>
            <value>
                <fullName>Cierre Plan Protección integral</fullName>
            </value>
            <value>
                <fullName>Cierre Fondo de Pensiones Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>