force-app/main/default/objects/PreVenta__c/fields/Correo_de_Empleado_Ficohsa__c.field-meta.xml
<CustomField>
    <fullName>Correo_de_Empleado_Ficohsa__c</fullName>
    <label>Correo de Empleado Ficohsa</label>
    <type>Email</type>
</CustomField>