force-app/main/default/objects/PreVenta__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>País del trabajo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>