force-app/main/default/objects/PreVenta__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Francisco Morazan</fullName>
            </value>
            <value>
                <fullName>Cortes</fullName>
            </value>
            <value>
                <fullName>Comayagua</fullName>
            </value>
            <value>
                <fullName>Lempira</fullName>
            </value>
            <value>
                <fullName>Intibuca</fullName>
            </value>
            <value>
                <fullName>La Paz</fullName>
            </value>
            <value>
                <fullName>Valle</fullName>
            </value>
            <value>
                <fullName>Choluteca</fullName>
            </value>
            <value>
                <fullName>El Paraiso</fullName>
            </value>
            <value>
                <fullName>Olancho</fullName>
            </value>
            <value>
                <fullName>Ocotepeque</fullName>
            </value>
            <value>
                <fullName>Copan</fullName>
            </value>
            <value>
                <fullName>Santa Barbara</fullName>
            </value>
            <value>
                <fullName>Yoro</fullName>
            </value>
            <value>
                <fullName>Atlantida</fullName>
            </value>
            <value>
                <fullName>Colon</fullName>
            </value>
            <value>
                <fullName>Gracias a Dios</fullName>
            </value>
            <value>
                <fullName>Islas de la Bahia</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>