force-app/main/default/objects/PreVenta__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descripción</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>