force-app/main/default/objects/PreVenta__c/fields/DoNotCall__c.field-meta.xml
<CustomField>
    <fullName>DoNotCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No llamar</label>
    <type>Checkbox</type>
</CustomField>