force-app/main/default/objects/PreVenta__c/fields/Ejecutivo_Banco_Ficohsa__c.field-meta.xml
<CustomField>
    <fullName>Ejecutivo_Banco_Ficohsa__c</fullName>
    <label>Ejecutivo Banco Ficohsa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>