force-app/main/default/objects/PreVenta__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>