force-app/main/default/objects/PreVenta__c/fields/Estado_Civil__c.field-meta.xml
<CustomField>
    <fullName>Estado_Civil__c</fullName>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Soltero</fullName>
            </value>
            <value>
                <fullName>Casado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>