force-app/main/default/objects/PreVenta__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extensión</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>