force-app/main/default/objects/PreVenta__c/fields/Extranjero_ID__c.field-meta.xml
<CustomField>
    <fullName>Extranjero_ID__c</fullName>
    <description>Para almacenar el id de Hondureños en el extranjero</description>
    <label>Extranjero_ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>