force-app/main/default/objects/PreVenta__c/fields/Fecha_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Nacimiento__c</fullName>
    <label>Fecha Nacimiento</label>
    <type>Date</type>
</CustomField>