force-app/main/default/objects/PreVenta__c/fields/Fecha_tentativa_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>Fecha_tentativa_de_cierre__c</fullName>
    <label>Fecha tentativa de cierre</label>
    <type>Date</type>
</CustomField>