force-app/main/default/objects/PreVenta__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>Nombres</label>
    <length>80</length>
    <type>Text</type>
</CustomField>