force-app/main/default/objects/PreVenta__c/fields/Funcion_Propietario__c.field-meta.xml
<CustomField>
    <fullName>Funcion_Propietario__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Función Propietario</label>
    <type>Text</type>
</CustomField>