force-app/main/default/objects/PreVenta__c/fields/HasOptedOutOfEmail__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No recibir correos electrónicos</label>
    <type>Checkbox</type>
</CustomField>