force-app/main/default/objects/PreVenta__c/fields/HasOptedOutOfFax__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfFax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No recibir fax</label>
    <type>Checkbox</type>
</CustomField>