force-app/main/default/objects/PreVenta__c/fields/ID_Prospecto__c.field-meta.xml
<CustomField>
    <fullName>ID_Prospecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidato</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>PreVentas</relationshipLabel>
    <relationshipName>PreVentas</relationshipName>
    <type>Lookup</type>
</CustomField>