force-app/main/default/objects/PreVenta__c/fields/Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Identificacion__c</fullName>
    <externalId>true</externalId>
    <label>Identificación</label>
    <length>18</length>
    <type>Text</type>
</CustomField>