force-app/main/default/objects/PreVenta__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultura</fullName>
            </value>
            <value>
                <fullName>Bancario</fullName>
            </value>
            <value>
                <fullName>Biotecnología</fullName>
            </value>
            <value>
                <fullName>Comercio</fullName>
            </value>
            <value>
                <fullName>Comida</fullName>
            </value>
            <value>
                <fullName>Comunicación</fullName>
            </value>
            <value>
                <fullName>Construcción</fullName>
            </value>
            <value>
                <fullName>Consultoría</fullName>
            </value>
            <value>
                <fullName>Cuidados Médicos</fullName>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
            </value>
            <value>
                <fullName>Educación</fullName>
            </value>
            <value>
                <fullName>Electrónico</fullName>
            </value>
            <value>
                <fullName>Energía</fullName>
            </value>
            <value>
                <fullName>Entretenimiento</fullName>
            </value>
            <value>
                <fullName>Envíos</fullName>
            </value>
            <value>
                <fullName>Finanzas</fullName>
            </value>
            <value>
                <fullName>Gobierno</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Ingeniería</fullName>
            </value>
            <value>
                <fullName>Manufactura</fullName>
            </value>
            <value>
                <fullName>Maquinaria</fullName>
            </value>
            <value>
                <fullName>ONG</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>PERS. NATURAL GENERADOR DE DIVISAS</fullName>
            </value>
            <value>
                <fullName>PERSONA NATURAL</fullName>
            </value>
            <value>
                <fullName>Químicos</fullName>
            </value>
            <value>
                <fullName>Recreación</fullName>
            </value>
            <value>
                <fullName>Seguros</fullName>
            </value>
            <value>
                <fullName>Tecnología</fullName>
            </value>
            <value>
                <fullName>Telecomunicaciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>