force-app/main/default/objects/PreVenta__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>Apellidos</label>
    <length>80</length>
    <type>Text</type>
</CustomField>