force-app/main/default/objects/PreVenta__c/fields/LastTransferDate__c.field-meta.xml
<CustomField>
    <fullName>LastTransferDate__c</fullName>
    <label>Última fecha de transferencia</label>
    <type>Date</type>
</CustomField>