force-app/main/default/objects/PreVenta__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>Origen del candidato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agencia FPC</fullName>
                <default>true</default>
                <label>Agencia FPC</label>
            </value>
            <value>
                <fullName>Agencias Banco</fullName>
            </value>
            <value>
                <fullName>Agencias Seguros</fullName>
            </value>
            <value>
                <fullName>Agencias Tarjetas</fullName>
            </value>
            <value>
                <fullName>Asesor Financiero</fullName>
            </value>
            <value>
                <fullName>Banca Coorporativa</fullName>
            </value>
            <value>
                <fullName>Banca PYME</fullName>
            </value>
            <value>
                <fullName>BASE EMPRESAS FAMILIARES</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Célula Banca Corporativa</fullName>
            </value>
            <value>
                <fullName>Célula Banca Empresarial</fullName>
            </value>
            <value>
                <fullName>Célula Institucionales</fullName>
            </value>
            <value>
                <fullName>Directorio de Exportadores</fullName>
            </value>
            <value>
                <fullName>Ficohsa Express</fullName>
            </value>
            <value>
                <fullName>Ficohsa Seguros</fullName>
            </value>
            <value>
                <fullName>Ficohsa Tarjeta</fullName>
            </value>
            <value>
                <fullName>FUNDAHRSE</fullName>
            </value>
            <value>
                <fullName>Interno</fullName>
            </value>
            <value>
                <fullName>Migración</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Proveedores</fullName>
            </value>
            <value>
                <fullName>Proyecto Planilla</fullName>
            </value>
            <value>
                <fullName>Proyecto Planilla Existente</fullName>
            </value>
            <value>
                <fullName>Proyecto Planilla Nuevo</fullName>
            </value>
            <value>
                <fullName>Top Planilla</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Proteccion Integral 1</fullName>
            </value>
            <value>
                <fullName>Proteccion Integral 2</fullName>
            </value>
            <value>
                <fullName>Call Center USA</fullName>
            </value>
            <value>
                <fullName>Canales Varios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>