force-app/main/default/objects/PreVenta__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>Móvil</label>
    <type>Phone</type>
</CustomField>