force-app/main/default/objects/PreVenta__c/fields/Monto_inicial_probable__c.field-meta.xml
<CustomField>
    <fullName>Monto_inicial_probable__c</fullName>
    <label>Monto inicial probable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>