force-app/main/default/objects/PreVenta__c/fields/Nombre_Conyugue__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Conyugue__c</fullName>
    <label>Nombre Conyugue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>