force-app/main/default/objects/PreVenta__c/fields/Nombre_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Empresa__c</fullName>
    <label>Nombre de la Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>