force-app/main/default/objects/PreVenta__c/fields/NumberOfEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumberOfEmployees__c</fullName>
    <label>Número de empleados</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>